<resources>
    <string name="app_name">ITIME</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_timing">Timing</string>
    <string name="menu_label">Label</string>
    <string name="menu_change_font">Change font</string>
    <string name="menu_theme_color">Theme color</string>
    <string name="menu_advanced_version">Advanced version</string>

    <string name="menu_setting">Setting</string>
    <string name="menu_about">About</string>
    <string name="menu_help_and_feedback">Help and feedback</string>

    <string name="text_view_addtiming_set_title">标题</string>
    <string name="edit_view_addtiming_set_title">生日，纪念日，节日，考试…</string>
    <string name="text_view_addtiming_repeat">重复设置</string>
    <string name="edit_view_addtiming_repeat">无</string>


    <string name="btn_text_view_addtiming_date1">日期&#10;aa</string>
    <string name="btn_text_view_addtiming_date2">长按使用日期计算器</string>
    <string name="btn_text_view_addtiming_repeat1">重复设置</string>
    <string name="btn_text_view_addtiming_repeat2">无</string>
    <string name="btn_text_view_addtiming_set_picture">图片</string>
    <string name="btn_text_view_addtiming_add_tag">添加标签</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_add_timing">AddTimingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
