<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_timing"
            android:icon="@drawable/ic_menu_clock"
            android:title="@string/menu_timing" />
        <item
            android:id="@+id/nav_label"
            android:icon="@drawable/ic_menu_tag"
            android:title="@string/menu_label" />
        <item
            android:id="@+id/nav_change_font"
            android:icon="@drawable/ic_menu_font"
            android:title="@string/menu_change_font" />
        <item
            android:id="@+id/nav_theme_color"
            android:icon="@drawable/ic_menu_color"
            android:title="@string/menu_theme_color" />
        <item
            android:id="@+id/nav_advanced_version"
            android:icon="@drawable/ic_menu_advanced"
            android:title="@string/menu_advanced_version" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_set"
                android:title="@string/menu_setting" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_aboutus"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_help_and_feedback"
                android:icon="@drawable/ic_menu_helpandfeedback"
                android:title="@string/menu_help_and_feedback" />
        </menu>
    </item>

</menu>
